// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doBackportVersion with pull request reference 1`] = `
Object {
  "html_url": "myHtmlUrl",
  "number": 1337,
}
`;

exports[`doBackportVersion with pull request reference 2`] = `
Array [
  Array [
    "git reset --hard && git clean -d --force && git checkout master && git pull origin master",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
      "maxBuffer": 104857600,
    },
    [Function],
  ],
  Array [
    "git fetch origin 6.x && git branch backport/6.x/pr-1000_pr-2000 origin/6.x --force && git checkout backport/6.x/pr-1000_pr-2000 ",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
      "maxBuffer": 104857600,
    },
    [Function],
  ],
  Array [
    "git cherry-pick mySha",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
      "maxBuffer": 104857600,
    },
    [Function],
  ],
  Array [
    "git cherry-pick mySha2",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
      "maxBuffer": 104857600,
    },
    [Function],
  ],
  Array [
    "git push sqren backport/6.x/pr-1000_pr-2000:backport/6.x/pr-1000_pr-2000 --force",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
      "maxBuffer": 104857600,
    },
    [Function],
  ],
]
`;

exports[`doBackportVersion without pull request reference 1`] = `
Object {
  "html_url": "myHtmlUrl",
  "number": 1337,
}
`;

exports[`doBackportVersion without pull request reference 2`] = `
Array [
  Array [
    "git reset --hard && git clean -d --force && git checkout master && git pull origin master",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
      "maxBuffer": 104857600,
    },
    [Function],
  ],
  Array [
    "git fetch origin 6.x && git branch backport/6.x/pr-1000_pr-2000 origin/6.x --force && git checkout backport/6.x/pr-1000_pr-2000 ",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
      "maxBuffer": 104857600,
    },
    [Function],
  ],
  Array [
    "git cherry-pick mySha",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
      "maxBuffer": 104857600,
    },
    [Function],
  ],
  Array [
    "git cherry-pick mySha2",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
      "maxBuffer": 104857600,
    },
    [Function],
  ],
  Array [
    "git push sqren backport/6.x/pr-1000_pr-2000:backport/6.x/pr-1000_pr-2000 --force",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
      "maxBuffer": 104857600,
    },
    [Function],
  ],
  Array [
    "git reset --hard && git clean -d --force && git checkout master && git pull origin master",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
      "maxBuffer": 104857600,
    },
    [Function],
  ],
  Array [
    "git fetch origin 6.x && git branch backport/6.x/commit-mySha origin/6.x --force && git checkout backport/6.x/commit-mySha ",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
      "maxBuffer": 104857600,
    },
    [Function],
  ],
  Array [
    "git cherry-pick mySha",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
      "maxBuffer": 104857600,
    },
    [Function],
  ],
  Array [
    "git push sqren backport/6.x/commit-mySha:backport/6.x/commit-mySha --force",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
      "maxBuffer": 104857600,
    },
    [Function],
  ],
]
`;
